<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.StudentDetailActivity">

    <androidx.appcompat.widget.Toolbar
    android:id="@+id/activity_student_insert_top_toolbar"
    android:layout_width="0dp"
    android:layout_height="80dp"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
    android:id="@+id/activity_student_insert_title_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:text="Student Data"
    android:textColor="@color/whiteChocolate"
    android:textSize="24dp"
    app:layout_constraintBottom_toBottomOf="@+id/activity_student_insert_top_toolbar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/activity_student_insert_top_toolbar" />

    <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    android:text="@string/first_name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/activity_student_insert_et_id" />

    <EditText
    android:id="@+id/activity_student_insert_et_first_name"
    android:hint="@string/first_name_hint"
    android:layout_width="340dp"
    android:layout_height="50dp"
    android:layout_marginStart="12dp"
    android:ems="10"
    android:inputType="text"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    android:text="Last Name:"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/activity_student_insert_et_first_name" />

    <EditText
    android:id="@+id/activity_student_insert_et_last_name"
    android:hint="@string/last_name_hint"
    android:layout_width="340dp"
    android:layout_height="50dp"
    android:layout_marginStart="12dp"
    android:ems="10"
    android:inputType="text"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    android:text="GPA:"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/activity_student_detail_et_major" />

    <EditText
    android:id="@+id/activity_student_insert_et_gpa"
    android:hint="@string/gpa_hint"
    android:layout_width="120dp"
    android:layout_height="50dp"
    android:layout_marginStart="12dp"
    android:ems="10"
    android:inputType="numberDecimal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="Age:"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <EditText
    android:id="@+id/activity_student_insert_et_id"
    android:layout_width="120dp"
    android:layout_height="50dp"
    android:layout_marginStart="12dp"
    android:ems="10"
    android:hint="@string/id_hint"
    android:inputType="number"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="Student ID:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_student_insert_top_toolbar" />

    <EditText
    android:id="@+id/activity_student_insert_et_age"
    android:hint="@string/age_hint"
    android:layout_width="120dp"
    android:layout_height="50dp"
    android:ems="10"
    android:inputType="number"
    app:layout_constraintStart_toStartOf="@+id/textView7"
    app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
    android:id="@+id/textView10"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    android:text="Email:"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/activity_student_insert_et_last_name" />

    <EditText
    android:id="@+id/activity_student_insert_et_email"
    android:hint="@string/email_hint"
    android:layout_width="340dp"
    android:layout_height="50dp"
    android:layout_marginStart="12dp"
    android:ems="10"
    android:inputType="text"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
    android:id="@+id/textView11"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    android:text="Major"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/activity_student_insert_et_email" />

    <AutoCompleteTextView
        android:id="@+id/activity_student_detail_et_major"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:completionThreshold="1"
        android:hint="@string/major_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <androidx.appcompat.widget.Toolbar
    android:id="@+id/activity_student_insert_bottom_tool_bar"
    android:layout_width="0dp"
    android:layout_height="60dp"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/activity_student_detail_btn_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/activity_student_insert_top_toolbar"
        app:layout_constraintStart_toStartOf="@+id/activity_student_insert_top_toolbar"
        app:srcCompat="@drawable/ic_back_arrow" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/activity_student_insert_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        app:icon="@drawable/ic_save"
        app:iconTint="@color/shadow"
        app:backgroundTint="@color/whiteChocolate"
        app:layout_constraintBottom_toBottomOf="@+id/activity_student_insert_bottom_tool_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/activity_student_insert_tv_id_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/error"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8" />

    <TextView
        android:id="@+id/activity_student_insert_tv_age_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/error"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7" />

    <TextView
        android:id="@+id/activity_student_insert_tv_first_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/error"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4" />

    <TextView
        android:id="@+id/activity_student_insert_tv_last_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/error"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/activity_student_insert_tv_email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/error"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10" />

    <TextView
        android:id="@+id/activity_student_insert_tv_major_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/error"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11" />

    <TextView
        android:id="@+id/activity_student_insert_tv_gpa_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/error"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6" />

    <ImageButton
        android:id="@+id/activity_student_detail_btn_delete"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="12dp"
        android:background="?attr/colorPrimary"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/activity_student_insert_top_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/activity_student_insert_top_toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>
